--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,7 @@ html {
 	width: 100%;
 	height: 22px;
 	position: absolute;
-	background: #202225;
+	background: #00000000;
 	-webkit-app-region: drag;
 
 	flex-shrink: 0;
@@ -44,6 +44,35 @@ html {
 	display:flex;
 	
 	padding-top: 4px;
+	opacity: 1;
+	
+	-moz-transition: background .2s ease-in;
+    -o-transition: background .2s ease-in;
+    -webkit-transition: background .2s ease-in;
+    transition: background .2s ease-in;
+}
+
+#backdrop.mac,
+#backdrop.win,
+#backdrop.linux,
+#backdrop.openbsd {
+	width: 100%;
+	height: 22px;
+	position: absolute;
+	background: #000000;
+	z-index: -1;
+	opacity: 0;
+}
+
+#barbackground.mac,
+#barbackground.win,
+#barbackground.linux,
+#barbackground.openbsd {
+	width: 100%;
+	height: 22px;
+	position: absolute;
+	background: #202225;
+	z-index: -2;
 }
 
 .wordmark.mac,
@@ -54,8 +83,12 @@ html {
 	position:absolute;
 	top: 0;
 	left: 0;
-	opacity: .6;
-	padding: 4px 8px 3px 8px;
+	opacity: 1;
+	padding: 4px 9px 3px 9px;
+}
+
+svg[name="DiscordWordmark"] path {
+	fill: rgb(114, 118, 125);
 }
 
 .buttonClose.mac,.buttonMin.mac,.buttonMax.mac,
@@ -105,6 +138,6 @@ html {
 .buttonMin.win:hover,.buttonMax.win:hover,
 .buttonMin.linux:hover,.buttonMax.linux:hover,
 .buttonMin.openbsd:hover,.buttonMax.openbsd:hover {
-	background-color: hsla(0,0%,100%,.05);
+	background-color: rgba(79, 84, 92, 0.16);
 	opacity:1;
 }
